# lahu

./: .gitignore  CONTRIBUTING.md  README.md  USAGE.md  report.md
backend/: README.md  requirements.txt
backend/api/: admin.py  blood_calculator_wrapper.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/api/migrations/: 0001_initial.py  0002_bloodbank.py  0003_add_blood_banks.py  0004_add_blood_bank_to_donation.py  0005_add_blood_group_to_donation.py
backend/bloodbank/: admin.py  models.py  settings.py  urls.py  views.py
backend/core/: settings.py  urls.py
backend/cpp/: CMakeLists.txt  blood_calculator.cpp  build.bat  build.sh
frontend/: README.md  next.config.mjs  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/api/test/: route.ts
frontend/app/blood-banks/: page.tsx
frontend/app/components/: CreateRequestForm.tsx  Modal.tsx  Navigation.tsx
frontend/app/contexts/: AuthContext.tsx
frontend/app/dashboard/: page.tsx
frontend/app/donors/: page.tsx
frontend/app/login/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/register/: page.tsx
frontend/app/requests/: page.tsx
frontend/app/search/: page.tsx
frontend/components/: BloodBanks.tsx  DonationLogForm.tsx  DonationRequestForm.tsx  DonorCard.tsx  DonorList.tsx  Footer.tsx  Navbar.tsx
frontend/hooks/: use-auth.tsx
